--- a/app/views/parcels/index.html.erb
+++ b/app/views/parcels/index.html.erb
@@ -1,5 +1,5 @@
 <div class="header m-5">
-  <h1>Αγγέλω?? Πού είναι τα κτήματά σου??</h1>
+  <h1 class="ms-3">Αγγέλω?? Πού είναι τα κτήματά σου??</h1>
 </div>
 <div class="container m-5">
   <div class="row">
