--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,11 +10,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+            <%= link_to 'Home', parcels_path, class: 'nav-link' %>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Messages</a>
-          </li>
+          
           <li class="nav-item dropdown">
             <%= image_tag 'logo_aggelw.png', class: 'avatar dropdown-toggle', id: 'navbarDropdown', data: { bs_toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' } %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
