--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="https://png.pngtree.com/png-clipart/20191120/original/pngtree-olive-icon-vector-illustration-png-image_5049475.jpg" />
+      <img class="img-logo" src="https://png.pngtree.com/png-clipart/20191120/original/pngtree-olive-icon-vector-illustration-png-image_5049475.jpg" />
 </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,7 +10,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
           <li class="nav-item active">
-            <%= link_to 'Home', parcels_path, class: 'nav-link' %>
+            <%= link_to parcels_path, class: 'nav-link me-3' do %>
+              <i class="fa fa-house"></i>
+            <% end %>
           </li>
           
           <li class="nav-item dropdown">
@@ -21,8 +23,6 @@
               <a class="dropdown-item" data-turbo-method="delete" href="#">Log out</a>
             </div>
           </li>
-          <!--li class="nav-item"-->
-          <!--/li-->
       </ul>
     </div>
   </div>
