some more styling

--- a/app/views/parcels/show.html.erb
+++ b/app/views/parcels/show.html.erb
@@ -21,7 +21,7 @@
   <button
   class="btn-coordinates mt-2 mb-4"
   data-action="click->toggle-button#toggle">
-  Check the coordinates :)
+  Coordinates  <i class="fa-solid fa-location-dot"></i>
   </button>
   <!-- Coordinates Table -->
   <div class="coordinates"
