--- a/app/assets/stylesheets/pages/_parcels_index.scss
+++ b/app/assets/stylesheets/pages/_parcels_index.scss
@@ -1,7 +1,10 @@
 // General Styling
 body {
-  background-color: #f4f4f2; // Light off-white background for a natural feel
-  font-family: "Helvetica Neue", sans-serif;
+  background-color: #ffffff;
+  background-image: url("https://www.transparenttextures.com/patterns/lined-paper.png");
+  background-size: 100px 100px; /* Adjust the size of the pattern */
+  background-repeat: repeat;
+  font-family: "Arial", sans-serif;
 }
 
 // Header styling
@@ -55,19 +58,19 @@ body {
 }
 
 // Link styling
-.parcel-name {
-  text-decoration: none;
-  color: #4a7c59;
+a {
+  text-decoration: none !important; // Force removal of underline
+  transition: color 0.3s ease;
+  color: #4a7c59 !important;
 }
 
-a {
-  color: #4a7c59;
-  transition: color 0.3s ease;
-  text-decoration: none;
+a:link {
+  text-decoration: none !important; // Remove underline on unvisited links
 }
 
 a:hover {
-  color: #8d8741; // Darker green-brown on hover
+  color: #8d8741 !important;
+  text-decoration: none !important; // Ensure underline is not added on hover
 }
 
 // Responsive design for smaller screens
