--- a/app/assets/stylesheets/pages/_parcels_index.scss
+++ b/app/assets/stylesheets/pages/_parcels_index.scss
@@ -61,7 +61,7 @@ body {
 a {
   text-decoration: none !important; // Force removal of underline
   transition: color 0.3s ease;
-  color: #4a7c59 !important;
+  // color: #4a7c59 !important;
 }
 
 a:link {
