--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,13 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container-all ">
+  <div class="header m-5">
+    <h2 class="ms-3">Καλώς ήρθες Αγγέλω! Ευκαιρία να τσεκάρεις τα κτήματά σου 🫒</h2>
+  </div>
+
+  <div class="banner">
+    <img src="https://oliveum.gr/wp-content/uploads/2020/08/%CE%97-%CF%80%CE%B5%CF%81%CE%B9%CE%BF%CF%87%CE%AE-slide-image.jpg" alt="Olive Grove" class="img-fluid" />
+  </div>
+
+  <div class="button-parcels mt-3 text-center">
+    <%= link_to '🌳🌳 🫒🫒', parcels_path, class: 'btn btn-outline-dark'%>
+  </div>
+</div>
