--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img class="img-logo" src="https://png.pngtree.com/png-clipart/20191120/original/pngtree-olive-icon-vector-illustration-png-image_5049475.jpg" />
-</a>
+  <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag "https://png.pngtree.com/png-clipart/20191120/original/pngtree-olive-icon-vector-illustration-png-image_5049475.jpg" %>
+    <% end %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
