--- a/app/views/parcels/show.html.erb
+++ b/app/views/parcels/show.html.erb
@@ -11,10 +11,13 @@
   <!-- Display Area -->
   <p><strong>Area:</strong> <%= @parcel.area %> m²</p>
 </div>
+<div class="test_delete">
+ <%= @parcel.coordinates_4326.to_json %>
+</div>
 <div class="map-container">
   <div style="width: 100%; height: 100%;"
   data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
+  data-map-markers-value="<%= @parcel.coordinates_4326.to_json %>"
   data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 </div>
 <div class="container_coordinates" data-controller="toggle-button">
