--- a/app/views/parcels/show.html.erb
+++ b/app/views/parcels/show.html.erb
@@ -11,14 +11,15 @@
   <!-- Display Area -->
   <p><strong>Area:</strong> <%= @parcel.area %> m²</p>
 </div>
-<div class="test_delete">
- <%= @parcel.coordinates_4326.to_json %>
-</div>
 <div class="map-container">
   <div style="width: 100%; height: 100%;"
-  data-controller="map"
-  data-map-markers-value="<%= @parcel.coordinates_4326.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+    data-controller="map"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+    data-map-markers-value="<%= @parcel.coordinates_4326.to_json %>"
+    data-map-parcel-name-value="<%= @parcel.name %>"
+    data-map-parcel-kaek-value="<%= @parcel.kaek %>"
+    data-map-parcel-area-value="<%= @parcel.area %>">
+  </div>
 </div>
 <div class="container_coordinates" data-controller="toggle-button">
   <button
